[package]
name = "dopbench"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "dopbench"

[dependencies]
chrono = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = "1.0.7"
toml_edit = "0.25.5"

[lints.clippy]
pedantic = "warn"
