[package]
name = "doptest"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "doptest"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1"
fs2 = "0.4"
futures = "0.3"
netcdf = "0.12.0"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "gzip"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = "1.0.7"
toml_edit = "0.25.5"

[lints.clippy]
pedantic = "warn"
