[package]
name = "provare"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
